# NIMP

./: .gitignore  CMakeLists.txt  NIMP.pro  cppcheck.sh  images.qrc
BlendSplitter/: include
BlendSplitter/lib/: libBlendSplitter.so.1  libBlendSplitter.so.1.0  libBlendSplitter.so.1.0.0  libBlendSplitter.so.2  libBlendSplitter.so.2.0  libBlendSplitter.so.2.0.0  libBlendSplitter.so.2.1  libBlendSplitter.so.2.1.0
QtSplitter/: include
QtSplitter/lib/: libQtSplitter.so.1  libQtSplitter.so.1.0.0
include/: Canvas.hpp  Global.hpp  Image.hpp  Main.hpp  Matrix.hpp  Node.hpp  NodeEditor.hpp  NodeInput.hpp  NodeOutput.hpp  NodeSystem.hpp  Nodes.hpp  Registry.hpp  RowSelector.hpp  Settings.hpp  Texture.hpp  WidgetActions.hpp  Widgets.hpp
include/NodeSystem/: Node.hpp  NodeData.hpp  NodeDataImage.hpp  NodeDataInt.hpp  NodeDataMonochrome.hpp  NodeDataTypes.hpp  NodeIO.hpp  NodeIONotifier.hpp  NodeInput.hpp  NodeInputImage.hpp  NodeInputInt.hpp  NodeInputMonochrome.hpp  NodeInputTypes.hpp  NodeInterface.hpp  NodeInterfaceNotifier.hpp  NodeInterfaceTypes.hpp  NodeNotifier.hpp  NodeOutput.hpp  NodeOutputImage.hpp  NodeOutputInt.hpp  NodeOutputMonochrome.hpp  NodeOutputTypes.hpp  RowSelector.hpp
include/NodeSystem/NodeDataTypes/: NodeDataImage.hpp  NodeDataInt.hpp  NodeDataMonochrome.hpp
include/NodeSystem/NodeInputTypes/: NodeInputImage.hpp  NodeInputInt.hpp  NodeInputMonochrome.hpp
include/NodeSystem/NodeInterfaceTypes/: NodeInterfaceBool.hpp  NodeInterfaceString.hpp  NodeInterfaceUniqueString.hpp
include/NodeSystem/NodeOutputTypes/: NodeOutputImage.hpp  NodeOutputInt.hpp  NodeOutputMonochrome.hpp
include/Nodes/: BMPinput.hpp  BoxBlur.hpp  CanvasNode.hpp  EdgeDetect.hpp  GaussianBlur.hpp  InvertMonochrome.hpp  KernelConv.hpp  KernelConvolution.hpp  MixRGB.hpp  SeparateRGB.hpp  Sharpen.hpp  Unsharp.hpp
include/Nodes/KernelConvolution/: Kernel.hpp
include/Registry/: ExtrinsicRegistry.hpp  GuiSettings.hpp  IntrinsicRegistry.hpp  RegistryNotifier.hpp
include/Settings/: ExtrinsicSettings.hpp
include/WidgetActions/: ActionWidget.hpp  ActionWidgetContainer.hpp  Draggable.hpp  Highlightable.hpp  Selectable.hpp  States.hpp
include/WidgetActions/ActionWidget/: ActionState.hpp  DefaultState.hpp  SelectedState.hpp
include/WidgetActions/States/: ActionState.hpp  DefaultState.hpp  DraggedState.hpp  HighlightedState.hpp  SelectedState.hpp
include/Widgets/: Canvas.hpp  NodeEditor.hpp
include/Widgets/NodeEditor/: NodeConnectorLeft.hpp  NodeConnectorRight.hpp  NodeContainer.hpp  NodeGraphics.hpp  NodeIOConnector.hpp  NodeInputGraphics.hpp  NodeInterfaceGraphics.hpp  NodeInterfaceGraphicsTypes.hpp  NodeOutline.hpp  NodeOutputGraphics.hpp  NodePath.hpp  NodePathCutter.hpp  TempPath.hpp
include/Widgets/NodeEditor/NodeInterfaceGraphicsTypes/: NodeInterfaceBoolGraphics.hpp  NodeInterfaceStringGraphics.hpp  NodeInterfaceUniqueStringGraphics.hpp
src/: Canvas.cpp  Image.cpp  Main.cpp  Matrix.tpp  Node.cpp  NodeEditor.cpp  NodeInput.cpp  NodeOutput.cpp  Registry.cpp  RowSelector.tpp  Settings.cpp  Texture.cpp
src/NodeSystem/: Node.cpp  NodeData.cpp  NodeDataImage.cpp  NodeDataInt.cpp  NodeDataMonochrome.cpp  NodeIO.cpp  NodeIONotifier.cpp  NodeInput.cpp  NodeInputImage.cpp  NodeInputInt.cpp  NodeInputMonochrome.cpp  NodeInterface.cpp  NodeInterfaceNotifier.cpp  NodeNotifier.cpp  NodeOutput.cpp  NodeOutputImage.cpp  NodeOutputInt.cpp  NodeOutputMonochrome.cpp  RowSelector.cpp  RowSelector.tpp
src/NodeSystem/NodeDataTypes/: NodeDataImage.cpp  NodeDataInt.cpp  NodeDataMonochrome.cpp
src/NodeSystem/NodeInputTypes/: NodeInputImage.cpp  NodeInputInt.cpp  NodeInputMonochrome.cpp
src/NodeSystem/NodeInterfaceTypes/: NodeInterfaceBool.cpp  NodeInterfaceString.cpp  NodeInterfaceUniqueString.cpp
src/NodeSystem/NodeOutputTypes/: NodeOutputImage.cpp  NodeOutputInt.cpp  NodeOutputMonochrome.cpp
src/Nodes/: BMPinput.cpp  BoxBlur.cpp  CanvasNode.cpp  EdgeDetect.cpp  GaussianBlur.cpp  InvertMonochrome.cpp  KernelConv.cpp  KernelConvolution.cpp  MixRGB.cpp  SeparateRGB.cpp  Sharpen.cpp  Unsharp.cpp
src/Nodes/KernelConvolution/: Kernel.cpp
src/Registry/: ExtrinsicRegistry.cpp  ExtrinsicSettings.cpp  GuiSettings.cpp  IntrinsicRegistry.cpp  RegistryNotifier.cpp
src/Settings/: ExtrinsicSettings.cpp  GuiSettings.cpp
src/WidgetActions/: ActionWidget.cpp  ActionWidgetContainer.cpp  Draggable.cpp  Highlightable.cpp  Selectable.cpp
src/WidgetActions/ActionWidget/: ActionState.cpp  DefaultState.cpp  SelectedState.cpp
src/WidgetActions/States/: ActionState.cpp  DefaultState.cpp  DraggedState.cpp  HighlightedState.cpp  SelectedState.cpp
src/Widgets/: Canvas.cpp  NodeEditor.cpp
src/Widgets/NodeEditor/: NodeConnectorLeft.cpp  NodeConnectorRight.cpp  NodeContainer.cpp  NodeGraphics.cpp  NodeIOConnector.cpp  NodeInputGraphics.cpp  NodeInterfaceGraphics.cpp  NodeOutline.cpp  NodeOutputGraphics.cpp  NodePath.cpp  NodePathCutter.cpp  TempPath.cpp
src/Widgets/NodeEditor/NodeInterfaceGraphicsTypes/: NodeInterfaceBoolGraphics.cpp  NodeInterfaceStringGraphics.cpp  NodeInterfaceUniqueStringGraphics.cpp
